relay-pii/src/snapshots/relay_pii__convert__tests__event_message_not_strippable.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "logentry": {
    "formatted": "hello world!"
  }
}
