relay-pii/src/snapshots/relay_pii__convert__tests__exclude_fields_on_field_name.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "extra": {
    "password": "[Filtered]"
  },
  "_meta": {
    "extra": {
      "password": {
        "": {
          "rem": [
            [
              "@password:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 11
        }
      }
    }
  }
}
