relay-pii/src/snapshots/relay_pii__convert__tests__explicit_fields.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "extra": {
    "mystuff": "[Filtered]"
  },
  "_meta": {
    "extra": {
      "mystuff": {
        "": {
          "rem": [
            [
              "strip-fields",
              "s",
              0,
              10
            ]
          ],
          "len": 3
        }
      }
    }
  }
}
