relay-pii/src/snapshots/relay_pii__convert__tests__explicit_fields_case_insensitive.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "extra": {
    "MYSTUFF": "[Filtered]"
  },
  "_meta": {
    "extra": {
      "MYSTUFF": {
        "": {
          "rem": [
            [
              "strip-fields",
              "s",
              0,
              10
            ]
          ],
          "len": 3
        }
      }
    }
  }
}
