relay-pii/src/snapshots/relay_pii__convert__tests__extra.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "extra": {
    "a_password_array": null,
    "a_password_here": "[Filtered]",
    "a_password_number": null,
    "apiKey": "[Filtered]",
    "api_key": "[Filtered]",
    "foo": "bar",
    "password": "[Filtered]",
    "the_secret": "[Filtered]"
  },
  "_meta": {
    "extra": {
      "a_password_array": {
        "": {
          "rem": [
            [
              "@password:filter",
              "x"
            ]
          ]
        }
      },
      "a_password_here": {
        "": {
          "rem": [
            [
              "@password:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 5
        }
      },
      "a_password_number": {
        "": {
          "rem": [
            [
              "@password:filter",
              "x"
            ]
          ]
        }
      },
      "apiKey": {
        "": {
          "rem": [
            [
              "@password:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 10
        }
      },
      "api_key": {
        "": {
          "rem": [
            [
              "@password:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 10
        }
      },
      "password": {
        "": {
          "rem": [
            [
              "@password:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 5
        }
      },
      "the_secret": {
        "": {
          "rem": [
            [
              "@password:filter",
              "s",
              0,
              10
            ]
          ],
          "len": 5
        }
      }
    }
  }
}
