relay-pii/src/snapshots/relay_pii__convert__tests__http.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "request": {
    "data": {
      "a_password_here": "[Filtered]",
      "apiKey": "[Filtered]",
      "api_key": "[Filtered]",
      "foo": "bar",
      "password": "[Filtered]",
      "the_secret": "[Filtered]"
    },
    "cookies": [
      [
        "a_password_here",
        "[Filtered]"
      ],
      [
        "apiKey",
        "[Filtered]"
      ],
      [
        "api_key",
        "[Filtered]"
      ],
      [
        "foo",
        "bar"
      ],
      [
        "password",
        "[Filtered]"
      ],
      [
        "the_secret",
        "[Filtered]"
      ]
    ],
    "headers": [
      [
        "A_password_here",
        "[Filtered]"
      ],
      [
        "ApiKey",
        "[Filtered]"
      ],
      [
        "Api_key",
        "[Filtered]"
      ],
      [
        "Foo",
        "bar"
      ],
      [
        "Password",
        "[Filtered]"
      ],
      [
        "The_secret",
        "[Filtered]"
      ]
    ],
    "env": {
      "a_password_here": "[Filtered]",
      "apiKey": "[Filtered]",
      "api_key": "[Filtered]",
      "foo": "bar",
      "password": "[Filtered]",
      "the_secret": "[Filtered]"
    }
  },
  "_meta": {
    "request": {
      "cookies": {
        "0": {
          "1": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 5
            }
          }
        },
        "1": {
          "1": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 10
            }
          }
        },
        "2": {
          "1": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 10
            }
          }
        },
        "4": {
          "1": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 5
            }
          }
        },
        "5": {
          "1": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 5
            }
          }
        }
      },
      "data": {
        "a_password_here": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 5
          }
        },
        "apiKey": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 10
          }
        },
        "api_key": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 10
          }
        },
        "password": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 5
          }
        },
        "the_secret": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 5
          }
        }
      },
      "env": {
        "a_password_here": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 5
          }
        },
        "apiKey": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 10
          }
        },
        "api_key": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 10
          }
        },
        "password": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 5
          }
        },
        "the_secret": {
          "": {
            "rem": [
              [
                "@password:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 5
          }
        }
      },
      "headers": {
        "0": {
          "1": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 5
            }
          }
        },
        "1": {
          "1": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 10
            }
          }
        },
        "2": {
          "1": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 10
            }
          }
        },
        "4": {
          "1": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 5
            }
          }
        },
        "5": {
          "1": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 5
            }
          }
        }
      }
    }
  }
}
