relay-pii/src/snapshots/relay_pii__convert__tests__http_remote_addr_stripped.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "request": {
    "env": {
      "REMOTE_ADDR": null
    }
  },
  "_meta": {
    "request": {
      "env": {
        "REMOTE_ADDR": {
          "": {
            "rem": [
              [
                "@ip:replace",
                "s",
                0,
                4
              ],
              [
                "@anything:remove",
                "x"
              ]
            ],
            "len": 9
          }
        }
      }
    }
  }
}
