relay-pii/src/snapshots/relay_pii__convert__tests__ip_stripped_spanv2.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "attributes": {
    "client.address": {
      "type": "string",
      "value": null
    },
    "user.name": {
      "type": "string",
      "value": "[ip]"
    }
  },
  "_meta": {
    "attributes": {
      "client.address": {
        "value": {
          "": {
            "rem": [
              [
                "@anything:remove",
                "x"
              ]
            ]
          }
        }
      },
      "user.name": {
        "value": {
          "": {
            "rem": [
              [
                "@ip:replace",
                "s",
                0,
                4
              ]
            ],
            "len": 13
          }
        }
      }
    }
  }
}
