relay-pii/src/snapshots/relay_pii__convert__tests__querystring_as_pairlist_with_partials.snap
---
source: relay-pii/src/convert.rs
expression: data
---
{
  "request": {
    "query_string": [
      [
        "foo",
        "bar"
      ],
      [
        "password",
        ""
      ],
      [
        "baz",
        "bar"
      ]
    ]
  }
}
